# deltalake-examples-rs

./: .gitignore  Cargo.toml  README.md  http_requests.json
data/http_requests/: part-00000-9f205eb4-3903-45a4-8e61-8b09bf063719-c000.snappy.parquet
examples/01_create/: README.md  main.rs
examples/02_write/: README.md  main.rs
examples/03_query/: README.md  main.rs
examples/04_partitioned/: README.md  main.rs
